--- a/scripts/README
+++ b/scripts/README
@@ -1,1 +1,4 @@
 loadEffectTopicFromHylandaTopicForTheme  录入EffectTopic
+
+1 loadHostWeightBaseData                   录入域名
+2 aggregateTotalPV                         计算域名权重                   
